# BrimView

./: .gitignore  README.md  dev_getting_started.md
BrimView-widgets/: README.md  pyproject.toml
BrimView-widgets/brimview_widgets/: __init__.py  bls_data_visualizer.py  bls_do_treatment.py  bls_file_input.py  bls_spectrum.py  bls_statistics.py  bls_subtypes.py  bls_zarr_info.py  browser_file_selectors.py  debug_report_widget.py  lazy_tabs.py  local_file_selectors.py  progress_widget.py  s3file_selector.py  sampledata_loader.py  utils.py  widgets.py
src/: index.py  no_jspi.html  zarr_wrapper.js
