[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "brimview_widgets/__init__.py"


[project]
name = "Brimview_widgets"
dynamic  = ["version"]
authors = [
    { name = "Carlo Bevilacqua", email = "carlo.bevilacqua@embl.de" },
    { name = "Sebastian Hambura", email = "sebastian.hambura@embl.de" },
]
description = "Widget to display Brimfile data in a Panel application"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",

]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

# pin to versions of dependencies that were tested with, but allow patch updates
dependencies = [  
  "bokeh>=3.9,<3.10",
  "holoviews>=1.23,<1.24",
  "panel>=1.9,<1.10",
  "panel-jstree==0.3.5",
  "xarray",
  "brimfile[export-tiff]>=1.6"
]

[project.optional-dependencies]
processing = ["HDF5_BLS_treat", "scipy"]
localfile = ["tkinterdnd2"]
remote-store = [ "brimfile[remote-store]"]
statistics = ["scipy"]

[project.urls]
Homepage = "https://github.com/brillouin-imaging/BrimView"
Repository = "https://github.com/brillouin-imaging/BrimView/tree/main/BrimView-widgets"
Issues = "https://github.com/brillouin-imaging/BrimView/issues"
